don't commit uploaded images

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -53,3 +53,11 @@ icon/
 phpmyadmin/
 readme.html
 stats/
+uploads/2020
+uploads/2021
+uploads/2022
+uploads/2023
+uploads/2024
+uploads/2025
+uploads/2026
+uploads/2027
